trying to fix clipping on mobile devices with svh

--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,15 @@
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-
   font-synthesis: none;
+  
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.cinzel{
+  font-family: "Cinzel", serif;
 }
 
 * {
@@ -16,31 +20,28 @@
   box-sizing: border-box;
 }
 
-.cinzel{
-  font-family: "Cinzel", serif;
-}
-
 body {
 	background: linear-gradient(-45deg, #ffffff, crimson, #087ea8, #7120b3);
   background-size: 400% 400%;
 	animation: backgroundAnim 15s ease infinite;
-	height: 100svh;
-  width: 100%;;
+  width: screen;
+  height: 100svh;
   overflow-x: hidden;
-  overflow-y: scroll;
 }
 
 section{
-  width: 100%;;
+  width: 100%;
   height: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
 #app {
-  height: 100%;
   width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 @keyframes backgroundAnim {
